--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Under Development Alert</title>
+    <title>Maintenance Mode - Golddev.Space</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
     <style>
         body {
@@ -30,7 +30,7 @@
                 if (willJoin) {
                     confirmDiscordRedirect();
                 } else {
-                    window.location.href = "https://www.google.com";
+                    window.location.href = "#";
                 }
             });
         }
